# nes_emulator

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: cpu.c.101B66FEDC4E3A7A.idx  cpu.h.00FE8D5B6DA25400.idx  loader.c.7078552D05C5FF95.idx  loader.h.D0B225E14957ED77.idx  main.c.6CDB9ED2F9F3F8F1.idx  memory.c.094452B1F5E7840E.idx  memory.h.10E435D4D6E690EE.idx  nes.c.47984E7338F453E5.idx  nes.h.759BE96DE862B249.idx
src/: cpu.c  cpu.h  loader.c  loader.h  main.c  memory.c  memory.h  nes.c  nes.h
